corpus/literals.txt
================================================================================
Multi-line strings
================================================================================

val string = """
  a
  b
  c
"""

--------------------------------------------------------------------------------

(compilation_unit
  (val_definition
    (identifier)
    (string)))

================================================================================
Interpolated strings
================================================================================

val string1 = "a $b c ${d} e"

val string2 = "$a"

val string3 = """
  a
  $b
  c
  ${d}
"""

--------------------------------------------------------------------------------

(compilation_unit
  (val_definition
    (identifier)
    (string))
  (val_definition
    (identifier)
    (string))
  (val_definition
    (identifier)
    (string)))

================================================================================
Floating point numbers
================================================================================

val string = 3.14

--------------------------------------------------------------------------------

(compilation_unit
  (val_definition
    (identifier)
    (floating_point_literal)))
